--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app",
   "scripts": {
     "test": "test",
-    "start": "webpack-dev-server --host 0.0.0.0 --hot",
+    "start": "webpack-dev-server --host 0.0.0.0 --hot --history-api-fallback",
     "build": "webpack --progress --colors",
     "copy": " cp ./Client/index.html /var/www/html | cp ./Client/index.js /var/www/html | cp ./Client/styles.css /var/www/html "
   },
@@ -16,12 +16,16 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
+    "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "express-partials": "^0.3.0",
+    "express-session": "^1.14.0",
     "google-maps-react": "^1.0.16",
     "morgan": "^1.7.0",
     "mysql": "^2.11.1",
+    "path": "^0.12.7",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-router": "^2.5.2",
