--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
+    "client-sessions": "^0.7.0",
+    "connect-mongo": "^1.3.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-partials": "^0.3.0",
     "express-session": "^1.14.0",
     "google-maps-react": "^1.0.16",
+    "mongoose": "^4.5.6",
     "morgan": "^1.7.0",
     "mysql": "^2.11.1",
     "path": "^0.12.7",
